# pngtoico

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: CHANGELOG.md
src/pngtoico/: __init__.py  cli.py  core.py
